genesis/orchestrator/manifests/elohim-app/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elohim-site-staging-service
  namespace: elohim-staging
  labels:
    app.kubernetes.io/name: elohim-site
    app.kubernetes.io/instance: elohim-site-staging
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: elohim
    app.kubernetes.io/managed-by: jenkins
spec:
  selector:
    app: elohim-site-staging
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
